[project]
name = "musubi-tuner-lora-loader"
description = "A ComfyUI custom node that enables direct loading of musubi-tuner based LoRAs (Z-Image Turbo, Hunyuan Video 1.5) with automatic in-memory conversion and caching."
version = "1.1.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/vjumpkung/ComfyUI-Musubi-Tuner-LoRA-Loader"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/vjumpkung/ComfyUI-Musubi-Tuner-LoRA-Loader/wiki"
"Bug Tracker" = "https://github.com/vjumpkung/ComfyUI-Musubi-Tuner-LoRA-Loader/issues"

[tool.comfy]
PublisherId = "vjumpkung"
DisplayName = "ComfyUI-Musubi-Tuner-LoRA-Loader"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

